# lackey

./: .devcontainer.json  .travis.yml  CHANGELOG.markdown  CHANGELOG.md  LICENSE.md  README.markdown  README.md  cabal.project  compose.yaml  lackey.cabal  package.yaml  stack.yaml
.devcontainer/: Dockerfile
.github/workflows/: ci.yaml  ci.yml  workflow.yaml
source/test-suite/: Main.hs
src/lib/: Lackey.hs
src/test/: Main.hs
test-suite/: Main.hs
tests/: Main.hs
