cabal-version: 2.2

name: lackey
version: 2.0.0.2

synopsis: Generate Ruby clients from Servant APIs.
description: Lackey generates Ruby clients from Servant APIs.

bug-reports: https://github.com/tfausak/lackey/issues
build-type: Simple
category: Web
extra-source-files: CHANGELOG.markdown README.markdown
homepage: https://github.com/tfausak/lackey#readme
license-file: LICENSE.markdown
license: MIT
maintainer: Taylor Fausak

source-repository head
  location: https://github.com/tfausak/lackey
  type: git

flag pedantic
  default: False
  description: Enables @-Werror@, which turns warnings into errors.
  manual: True

common library
  build-depends:
    , base >= 4.13.0 && < 4.17
    , servant-foreign >= 0.15 && < 0.16
    , text >= 1.2.4 && < 1.3
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missing-exported-signatures
    -Wno-unsafe

  if flag(pedantic)
    ghc-options: -Werror

  if impl(ghc >= 8.10)
    ghc-options:
      -Wno-missing-safe-haskell-mode
      -Wno-prepositive-qualified-module

  if impl(ghc >= 9.2)
    ghc-options:
      -Wno-missing-kind-signatures

common executable
  import: library

  build-depends: lackey
  ghc-options:
    -rtsopts
    -threaded
    -Wno-unused-packages

library
  import: library

  exposed-modules: Lackey
  hs-source-dirs: source/library

test-suite test
  import: executable

  build-depends:
    , hspec >= 2.7.6 && < 2.11
    , servant >= 0.16.2 && < 0.20
  hs-source-dirs: source/test-suite
  main-is: Main.hs
  type: exitcode-stdio-1.0
