cabal-version: 2.2
name: lackey
version: 2.0.0.8
synopsis: Generate Ruby clients from Servant APIs.
description: Lackey generates Ruby clients from Servant APIs.
bug-reports: https://github.com/tfausak/lackey/issues
build-type: Simple
category: Web
extra-doc-files:
  CHANGELOG.md
  README.md

homepage: https://github.com/tfausak/lackey#readme
license-file: LICENSE.txt
license: MIT
maintainer: Taylor Fausak

source-repository head
  location: https://github.com/tfausak/lackey
  type: git

flag pedantic
  default: False
  description: Enables @-Werror@, which turns warnings into errors.
  manual: True

common library
  build-depends: base ^>=4.18.0.0 || ^>=4.19.0.0 || ^>=4.20.0.0
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missing-exported-signatures
    -Wno-missing-kind-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-prepositive-qualified-module
    -Wno-unsafe

  if flag(pedantic)
    ghc-options: -Werror

common executable
  import: library
  build-depends: lackey
  ghc-options:
    -rtsopts
    -threaded

library
  import: library
  build-depends:
    servant-foreign ^>=0.16,
    text ^>=2.0.2 || ^>=2.1,

  exposed-modules: Lackey
  hs-source-dirs: source/library

test-suite lackey-test-suite
  import: executable
  build-depends:
    hspec ^>=2.11.8,
    servant ^>=0.20.1,
    text,

  hs-source-dirs: source/test-suite
  main-is: Main.hs
  type: exitcode-stdio-1.0
